website link added

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                 in this website and try to make it much better with more features in the future.
                             </h6>
                             <button type="button" class="btn btn-success">
-                                <a href="www.google.com" class="visit_website">Visit the Website</a>
+                                <a href="https://pramod-portfolio.netlify.app/" class="visit_website">Visit the Website</a>
                             </button>
                         </div>
                     </div>
